--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         padding: 15px;
       }
     </style>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header
@@ -51,19 +51,21 @@
       <article class="infoArt">
         <label id="NombreLabel" class="infoLabel">Nombre:</label>
         <label id="NombreValvue" class="infoValvue">
-          Camilo Andres Leon Limas</label
+          </label
         >
         <label id="EdadLabel" class="infoLabel"> Edad:</label>
-        <label id="EdadValvue" class="infoValvue"> 45 </label>
+        <label id="EdadValvue" class="infoValvue">  </label>
         <label id="OcupacionLabel" class="infoLabel"> Ocupacion: </label>
         <label id="OcupacionValvue" class="infoValvue"
-          >Ingenieria de Sistemas
+          >
         </label>
       </article>
     </header>
     <section class="content">
       <article class="card">
-        <a href="form.html">Formulario</a>
+        <a href="https://www.google.com">Formulario</a>
+        </article>
+        <article class="card">
         <a href="https://www.google.com" target="_blank"> Perfil </a>
       </article>
       <article class="card">
@@ -79,7 +81,7 @@
         <a href="https://www.google.com" target="_blank"> Gustos </a>
       </article>
       <article class="card">
-        <a href="https://www.google.com" target="_blank"> Perfil </a>
+        <a href="https://www.google.com" target="_blank"> Recomendaciones </a>
       </article>
     </section>
   </body>
