--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="https://www.google.com" target="_blank"> Idiomas </a>
       </article>
       <article class="card">
-        <a href="https://www.google.com" target="_blank"> Gustos </a>
+        <a href="https://www.google.com" target="_blank"> Estudios </a>
       </article>
       <article class="card">
         <a href="https://www.google.com" target="_blank"> Perfil </a>
